--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <h1>Wheel Of Fortune</h1>
     <form class='piecesForm' action="#">
-        <label for="howMany">How Many Parts</label>
+        <label for="howMany">how many names:</label>
         <input type="number" min='2' max='30' placeholder='2' value='2'>
+        <div class='wheel-type'>
+            <p>do you want to remove the drawn items from the board?</p>
+            <label for="elementCut"><input type="radio" name="elementCut" id="elementCut" checked>YES</label>
+            <label for="notCut"><input type="radio" name="elementCut" id="notCut">NO</label>
+        </div>
         <button class='btn btn-success'>submit</button>
+        <button class='btn btn-primary new-wheel'>new wheel</button>
     </form>
-    <form class='nameInputs' action="#">
-    </form>
+    <div>
+        <form class='nameInputs' action="#">
+        </form>
+    </div>
     <div class="container">
-        <button type="button" class="btn btn-primary" onClick='handleClick()'>Click</button>
+        <button type="button" class="btn btn-danger" onClick='handleClick()'>Start wheel</button>
         <div class='canvasContainer'>
             <canvas width="600" height="600"></canvas>
         </div>
