--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wheel Of Fortune</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png" />
+    <link rel="shortcut icon" type="image/jpg"
+        href="https://github.com/Morswin19/wheel_of_fortune_vanillaJS/blob/master/img/favicon.png?raw=true" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
-        type='text/css'>
-    <script src="https://kit.fontawesome.com/2bbde87d82.js"></script>
 </head>
 
 <body>
@@ -38,11 +36,11 @@
     </div>
     <div class='container'>
         <div class="wheelContainer">
-            <button type="button" class="btn btn-danger" onClick='handleClick()'>start wheel</button>
+            <button type="button" class="btn btn-danger" onClick='handleClick()' disabled>start wheel</button>
             <div class='canvasContainer'>
                 <canvas width="600" height="600"></canvas>
-                <span style="font-size: 48px; color: goldenrod;">
-                    <i class="fab fa-galactic-senate"></i>
+                <span>
+                    <img src="./img/indicator.png" alt="">
                 </span>
             </div>
         </div>
