--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,9 +14,31 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row h-100">
+            <div id="wheelSide" class="col-xl-7 h-100">
+                <div id="titleContainer" class="d-flex justify-content-end">
+                    <h1 class=" mt-5 pt-5  text-uppercase">Struggling to make
+                        a decision?</h1>
+                </div>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ut accusantium, nobis repellendus
+                    itaque ab beatae quam sit eligendi quia vero porro voluptate natus maiores dolor iste suscipit
+                    consequatur ex!</p>
+            </div>
+            <div id="textSide" class="col-xl-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                voluptas deleniti
+                quis, voluptate voluptatibus id natus voluptates amet ipsa nisi dolores animi sint laboriosam dolorem
+                harum? Culpa sint nesciunt fugiat, error itaque quae magnam magni, neque eos animi temporibus delectus
+                quod obcaecati, voluptatem eveniet libero incidunt amet beatae? Quisquam, obcaecati!</div>
+        </div>
+    </div>
     <h1>Wheel Of Fortune</h1>
     <form class='piecesForm' action="#">
         <div>
@@ -34,7 +57,7 @@
         <form class='nameInputs' action="#">
         </form>
     </div>
-    <div class='container'>
+    <div class='container2'>
         <div class="wheelContainer">
             <button type="button" class="btn btn-danger" onClick='handleClick()' disabled>start wheel</button>
             <div class='canvasContainer'>
