--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
                         a decision?</h1>
                     <h5 class="">Enter your options and let the fate decide for you!</h5>
                     <div id="wheel" class="rounded-circle mt-5"></div>
+                    <footer>
+                        <span>© P. Kalman</span>
+                    </footer>
                 </div>
 
                 <div id="backgroundText">
                     <img src="../wheel_of_fortune_vanillaJS/img/DECIDER.svg" alt="">
                 </div>
+
             </div>
             <div id="textSide" class="col-xl-5">
-                <div class="text-center">
+                <div id="inputsContainer" class="text-center">
                     <h1 class="text-uppercase font-weight-bold mb-5">Choose between:</h1>
                     <div class="d-flex flex-md-column">
                         <div id="inputs" class="d-flex flex-column">
@@ -47,13 +51,14 @@
                         <span class="mt-2">Add more</span>
                     </div>
                 </div>
-                <div id="multiple" class="d-flex align-items-baseline mb-5">
+                <div id="multiple" class="d-flex align-items-baseline">
                     <h5 class="text-uppercase mr-4">Choose one option <span class="font-weight-bold">multiple</span>
                         times?
                     </h5>
                     <span id="multipleYes" class="multiple multipleActive rounded-circle">YES</span>
                     <span id="multipleNo" class="multiple rounded-circle">NO</span>
                 </div>
+                <button id="play" class="btn-lg">let's play!</button>
             </div>
         </div>
     </div>
