--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div id="wheelSide" class="col-xl-7 p-0 d-flex justify-content-end">
                 <div id="titleContainer" class="d-flex flex-column ml-5">
-                    <h1 class=" mt-5 pt-5  text-uppercase">Struggling to make
+                    <h1 class="pt-5  text-uppercase">Struggling to make
                         a decision?</h1>
                     <h5 class="">Enter your options and let the fate decide for you!</h5>
                     <div id="wheel" class="rounded-circle mt-5"></div>
@@ -35,7 +35,7 @@
                 </div>
 
                 <div id="backgroundText">
-                    <img src="../wheel_of_fortune_vanillaJS/img/DECIDER.svg" alt="">
+                    <img src="/img/DECIDER.svg" alt="">
                 </div>
 
             </div>
@@ -47,7 +47,10 @@
                             <input class="mb-5" type="text" placeholder='enter option 1'>
                             <input class="mb-5" type="text" placeholder='enter option 2'>
                         </div>
-                        <i class="fa fa-plus rounded-circle m-auto"></i>
+                        <div id="addOption">
+                            <img src="./img/Union 1.svg" alt="">
+                            <!-- <i class="fa fa-plus rounded-circle m-auto"></i> -->
+                        </div>
                         <span class="mt-2">Add more</span>
                     </div>
                 </div>
@@ -74,7 +77,7 @@
             </div>
         </div>
         <button class='btn btn-success'>submit</button>
-        <button class='btn btn-primary new-wheel'>new wheel</button>
+        <button class='btn btn-primarnew-wheel'>new wheel</button>
     </form>
     <div>
         <form class='nameInputs' action="#">
