--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <h5 class="text-uppercase mr-4">Choose one option <span class="font-weight-bold">multiple</span>
                         times?
                     </h5>
-                    <span id="multipleYes" class="multiple multipleActive rounded-circle">YES</span>
-                    <span id="multipleNo" class="multiple rounded-circle">NO</span>
+                    <span id="multipleYes" class="multipleActive rounded-circle">YES</span>
+                    <span id="multipleNo" class="multipleDisactive rounded-circle">NO</span>
                 </div>
                 <button id="play" class="btn-lg">let's play!</button>
             </div>
