--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
                     <h1 class="pt-5  text-uppercase">Struggling to make
                         a decision?</h1>
                     <h5 class="">Enter your options and let the fate decide for you!</h5>
-                    <div id="wheel" class="rounded-circle mt-5"></div>
+                    <div id="wheel" class="rounded-circle mt-5">
+                        <div class='canvasContainer'>
+                            <canvas width="750" height="750"></canvas>
+                            <span>
+                            </span>
+                        </div>
+                    </div>
                     <footer>
                         <span>© P. Kalman</span>
                     </footer>
@@ -44,8 +50,8 @@
                     <h1 class="text-uppercase font-weight-bold mb-5">Choose between:</h1>
                     <div class="d-flex flex-md-column">
                         <div id="inputs" class="d-flex flex-column">
-                            <input class="mb-5" type="text" placeholder='enter option 1'>
-                            <input class="mb-5" type="text" placeholder='enter option 2'>
+                            <input class="option mb-5" type="text" placeholder='enter option 1'>
+                            <input class="option mb-5" type="text" placeholder='enter option 2'>
                         </div>
                         <div id="addOption">
                             <img src="./img/Union 1.svg" alt="">
@@ -61,41 +67,8 @@
                     <span id="multipleYes" class="multipleActive rounded-circle">YES</span>
                     <span id="multipleNo" class="multipleDisactive rounded-circle">NO</span>
                 </div>
-                <button id="play" class="btn-lg">let's play!</button>
+                <button onclick="handleClick()" id="play" class="btn-lg">let's play!</button>
             </div>
-        </div>
-    </div>
-    <h1>Wheel Of Fortune</h1>
-    <form class='piecesForm' action="#">
-        <div>
-            <label for="howMany">how many names:</label>
-            <input type="number" min='2' max='30' placeholder='2' value='2'>
-            <div class='wheel-type'>
-                <p>remove drawn items from the board?</p>
-                <label for="elementCut"><input type="radio" name="elementCut" id="elementCut" checked>YES</label>
-                <label for="notCut"><input type="radio" name="elementCut" id="notCut">NO</label>
-            </div>
-        </div>
-        <button class='btn btn-success'>submit</button>
-        <button class='btn btn-primarnew-wheel'>new wheel</button>
-    </form>
-    <div>
-        <form class='nameInputs' action="#">
-        </form>
-    </div>
-    <div class='container2'>
-        <div class="wheelContainer">
-            <button type="button" class="btn btn-danger" onClick='handleClick()' disabled>start wheel</button>
-            <div class='canvasContainer'>
-                <canvas width="400" height="400"></canvas>
-                <span>
-                    <img src="./img/indicator.png" alt="">
-                </span>
-            </div>
-        </div>
-        <div class='actual'>
-            <h2>drawn elements<span>(0)</span></h2>
-            <ul class='drawnElementsList'></ul>
         </div>
     </div>
     <script src="app.js"></script>
