image link change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 </div>
 
                 <div id="backgroundText">
-                    <img src="/img/DECIDER.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/Morswin19/decider/9ddb6f0e0ab3d9fa653261ec30a2d9549f1187a6/img/DECIDER.svg"
+                        alt="">
                 </div>
 
             </div>
