more rwd changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <img src="./img/Polygon 2.svg" alt="">
                     </div>
-                    <div id="decisions" class="mt-5">
+                    <div id="decisions" class="d-flex mt-5">
                         <h2 class="text-uppercase nonDisplay">The decision has been made!</h2>
                         <ul id="decisionsMade">
                         </ul>
