--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wheel Of Fortune</title>
+    <title>Decider</title>
     <link rel="shortcut icon" type="image/jpg"
         href="https://github.com/Morswin19/wheel_of_fortune_vanillaJS/blob/master/img/favicon.png?raw=true" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -22,9 +22,9 @@
 
 <body>
     <div class="container-fluid">
-        <!-- <div id="backgroundText">
+        <div id="backgroundText">
             <img src="./img/DECIDER.svg" alt="">
-        </div> -->
+        </div>
         <div class="row">
             <div id="wheelSide" class="col-xl-7 p-0 d-flex justify-content-end">
                 <div id="wheelContainer" class="d-flex flex-column align-items-center">
