--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#317EFB" />
     <title>Decider</title>
-    <link rel="shortcut icon" type="image/jpg"
-        href="https://github.com/Morswin19/wheel_of_fortune_vanillaJS/blob/master/img/favicon.png?raw=true" />
+    <link rel="shortcut icon" type="image/ico"
+        href="./img/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
