add tab key functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div id="wheel" class="rounded-circle">
                             <div class='canvasContainer'>
-                                <canvas width="750" height="750"></canvas>
+                                <canvas id="canvas-element" width="750" height="750"></canvas>
                                 <span>
                                 </span>
                             </div>
@@ -82,7 +82,7 @@
                             <div id="multipleNo" class="multiButton multipleDisactive rounded-circle">NO</div>
                         </div>
                     </div>
-                    <button id="play" onclick="handleClick()" class="btn-lg">let’s decide!</button>
+                    <button id="play" onclick="startWheel()" class="btn-lg">let’s decide!</button>
                 </div>
             </div>
         </div>
