update enter key functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div id="wheel" class="rounded-circle">
                             <div class='canvasContainer'>
-                                <canvas id="canvas-element" width="750" height="750"></canvas>
+                                <canvas width="750" height="750"></canvas>
                                 <span>
                                 </span>
                             </div>
@@ -50,7 +50,7 @@
                             </ul>
                         </div>
                         <footer>
-                            <span>© P. Kalman</span>
+                            <span>© P. Kalman 2020</span>
                         </footer>
                     </div>
                 </div>
